--- a/lib/vdsm/storage/Makefile.am
+++ b/lib/vdsm/storage/Makefile.am
@@ -40,6 +40,7 @@ dist_vdsmstorage_PYTHON = \
 	devicemapper.py \
 	directio.py \
 	dispatcher.py \
+	disklease.py \
 	dmsetup.py \
 	exception.py \
 	fallocate.py \
