api: introduce CopyDataExternalEndpoint
Add CopyDataExternalEndpoint to allow copying to and from managed block
volumes

Change-Id: Ie02dd4bb4448a0335434744423f36ebf63ed35b9
Signed-off-by: Benny Zlotnik <bzlotnik@redhat.com>

--- a/lib/vdsm/api/vdsm-api.yml
+++ b/lib/vdsm/api/vdsm-api.yml
@@ -8202,6 +8202,22 @@ types:
             defaultvalue: null
         type: object
 
+    CopyDataExternalEndpoint: &CopyDataExternalEndpoint
+        added: '4.4'
+        description: An endpoint describing an external path to copy.
+        name: CopyDataExternalEndpoint
+        properties:
+        -   description: The expected url of the Volume
+            name: url
+            type: string
+        -   description: The lease to be used for job tracking
+            name: lease
+            type: *Lease
+        -   description: The expected generation of the lease
+            name: generation
+            type: uint
+        type: object
+
     CopyDataEndpoint: &CopyDataEndpoint
         added: '4.1'
         description: A discriminated record containing an endpoint for a
